--- a/Grandhonor/rk_工地盒子/rk_doc/1-11_平台部署.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-11_平台部署.md
@@ -2,6 +2,29 @@
 
 + rk1126平台部署
 
+## 动态ip申请
+
++ 使用 1000M 网口作为静态IP，电脑通过网线 直连 到盒子，设置同一网段，内部登陆盒子界面
+  + 192.168.1.150  厂家静态IP 
+  + 192.169.5.56   公司内部测试IP 
+
++ 使用 100M 网口作为动态IP ，在客户现场，盒子通过网线 连接到 路由器上，动态申请IP，后续所有访问基于这个IP 
+
+## docker ping 工具
+
++ 下载ping命令
+```bash 
+apt install iputils-ping
+```
+
+## 盒子无法访问平台网址
+
++ 方法一
+  + 修改 /etc/network/interfaces 中的静态别名ip，把 gateway 一行注释掉 
+
++ 方法二
+  + 使用 route 设置默认路由
+
 ## docker命令
 
 + 启动容器命令
