--- a/CPP/C-C++10_01_qt应用程序开发_理论基础.md
+++ b/CPP/C-C++10_01_qt应用程序开发_理论基础.md
@@ -2,4 +2,54 @@
 
 + QT 应用程序开发 理论基础
 
+## QT按钮组件
+
++ QT中有六种按钮组件，分别是按压按钮QPushButton、工具按钮QToolButton、单选按钮QRadioButton、多选按钮QCheckBox、命令链接按钮QCommandLinkButton、按钮盒QButtonBox
+
 ## QPushButton
+
+### QPushButton组件简介
+
++ QPushButton组件用于接受用户点击事件，能够显示提示字符串，是功能性组件，需要父组件作为容器，能够在父组件中进行定位，用于执行命令或触发事件。
++ QPushButton的类继承如下：
+  + QPushButton ：public QAbstractButton ：pubic QWidget ：public QObject, public QPaintDevice
+
+### QPushButton组件属性
+
++ QPushButton 组件属性设置选项：
+  + A、name：组件对应源代码中的名字。
+  + B、text：组件对应图形界面中显示的名字。
+  + C、font：设置text的字体。
+  + D、enabled：组件是否可用。
+
+### QPushButton组件常用成员函数
+
+```cpp
+QPushButton：：QPushButton（const QString &text，QWidget *parent，const char *name = 0);
+```
++ 构造一个名称为name，父对象为parent并且文本为text的按压按钮。
+
+```cpp
+void QAbstractButton：：setText（const QString &）
+```
++ 设置按钮上显示的文本。
+
+```cpp
+QString QAbstractButton：：text（）const
+```
++ 返回按钮上显示的文本。
+
+```cpp
+void QAbstractButton：：pressed（）[signal]
+```
++ 当按下按钮时，发射信号。
+
+```cpp
+void QAbstractButton：：clicked（）[signal]
+```
++ 当单击按钮时，发射信号。
+
+```cpp
++ void QAbstractButton：：released（）[signal]
+```
++ 当释放按钮时，发射信号。
