--- a/Books/算法导论.md
+++ b/Books/算法导论.md
@@ -44,3 +44,24 @@
 ### 渐近记号
 
 + 我们将主要使用渐近记号来描述算法的运行时间
+
+## 第四章 分治策略
+
++ 归并排序利用了分支策略。在分支策略中，我们递归地求解一个问题，在每层递归中应用如下三个步骤：
+  + 分解(Divide)步骤将问题划分为一些子问题，子问题的形式与原问题一样，只是规模更小。
+  + 解决(Conquer)步骤递归地求解出子问题。如果子问题的规模足够小，则停止递归，直接求解。
+  + 合并(Combine)步骤将子问题的解组合成原问题的解
++ 当子问题足够大，需要递归求解时，我们称之为递归情况(recursive case).
++ 当子问题变得足够小，不再需要递归时，我们说递归已经“触底”，进入了基本情况(base case)。有时，除了与原问题形式完全一样的规模更小的子问题外，还需要求解与原问题不完全一样的子问题。我们将这些子问题的求解看做合并步骤的一部分。
+
++ 递归式
+  + 递归式与分支方法是紧密相关的。因为使用递归式可以很自然地刻画分支算法的运行时间。
+  + 一个递归式(recurrence)就是一个等式或不等式，他通过更小的输入上的函数值来描述一个函数。
+
+## 第五章 概率分析和随机算法
+
+### 概率分析
+
++ 概率分析是在问题分析中应用概率的理念。
+
++ 更一般的，如果一个算法的行为不仅由输入决定，而且也由随机数生成器(random-number generator)产生的数值决定，则称这个算法是随机的(randomized)
