增加事件分发器笔记

--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,403 @@
 
 + C++ 相关的理论基础知识
 
+## C++ 事件分发器 用类对象进行事件分发
+
+在C++中，您可以创建一个事件分发器（Event Dispatcher）类，用于将事件分发给不同的事件处理对象（类对象）。以下是一个简单示例，演示如何使用类对象进行事件分发：
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <functional>
+
+// 事件类型枚举
+enum class EventType {
+    MouseClick,
+    MouseMove,
+    KeyPress
+};
+
+// 事件数据结构
+struct Event {
+    EventType type;
+    int x;
+    int y;
+    char key;
+};
+
+// 事件处理接口
+class EventListener {
+public:
+    virtual void onEvent(const Event& event) = 0;
+};
+
+// 事件分发器
+class EventDispatcher {
+public:
+    void addListener(EventListener* listener) {
+        listeners.push_back(listener);
+    }
+
+    void dispatchEvent(const Event& event) {
+        for (auto listener : listeners) {
+            listener->onEvent(event);
+        }
+    }
+
+private:
+    std::vector<EventListener*> listeners;
+};
+
+// 具体的事件处理类
+class MouseEventListener : public EventListener {
+public:
+    void onEvent(const Event& event) override {
+        if (event.type == EventType::MouseClick) {
+            std::cout << "Mouse clicked at (" << event.x << ", " << event.y << ")" << std::endl;
+        } else if (event.type == EventType::MouseMove) {
+            std::cout << "Mouse moved to (" << event.x << ", " << event.y << ")" << std::endl;
+        }
+    }
+};
+
+class KeyPressListener : public EventListener {
+public:
+    void onEvent(const Event& event) override {
+        if (event.type == EventType::KeyPress) {
+            std::cout << "Key pressed: " << event.key << std::endl;
+        }
+    }
+};
+
+int main() {
+    EventDispatcher dispatcher;
+    MouseEventListener mouseListener;
+    KeyPressListener keyListener;
+
+    dispatcher.addListener(&mouseListener);
+    dispatcher.addListener(&keyListener);
+
+    // 模拟事件触发
+    Event mouseEvent = {EventType::MouseClick, 100, 200, '\0'};
+    Event keyEvent = {EventType::KeyPress, 0, 0, 'A'};
+
+    dispatcher.dispatchEvent(mouseEvent);
+    dispatcher.dispatchEvent(keyEvent);
+
+    return 0;
+}
+```
+
+在这个示例中，我们首先定义了事件类型枚举（`EventType`）和事件数据结构（`Event`），以便表示不同类型的事件及其相关数据。然后，我们创建了一个事件监听接口（`EventListener`），它包含一个抽象的 `onEvent` 函数，用于处理事件。
+
+接下来，我们创建了一个事件分发器类（`EventDispatcher`），它可以注册事件监听器并通过 `dispatchEvent` 函数将事件分发给已注册的监听器。
+
+最后，我们创建了两个具体的事件监听器类（`MouseEventListener` 和 `KeyPressListener`），它们分别实现了 `onEvent` 函数来处理不同类型的事件。
+
+在 `main` 函数中，我们创建了事件分发器对象 `dispatcher`，并将两个事件监听器对象注册到分发器中。然后，我们模拟事件的触发，创建事件对象并通过分发器将事件发送给相应的监听器。
+
+这种方式使事件处理和事件分发能够更加灵活，不同的监听器可以独立实现它们自己的事件处理逻辑，从而使代码更加模块化和可扩展。
+
+## C++ 事件处理
+
+在C++中进行事件处理通常涉及以下几个方面：
+
+1. **事件类型定义：** 首先，您需要定义表示不同事件类型的数据结构或枚举。这些事件类型通常包括鼠标点击、键盘输入、定时器触发等。
+
+2. **事件监听器：** 事件监听器是负责监听和处理特定事件类型的类。每个事件类型都应该有一个相应的事件监听器。事件监听器包含了事件处理函数，当事件发生时，这些函数会被调用。
+
+3. **事件分发器：** 事件分发器是一个中介者，负责将事件分发给正确的事件监听器。它通常包含一个事件队列，用于存储待处理的事件，以及一个事件分发函数，用于将事件发送到相应的监听器。
+
+以下是一个简单的C++事件处理示例，演示了如何创建事件类型、事件监听器和事件分发器。
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <functional>
+
+// 定义鼠标事件类型
+enum class MouseEventType {
+    Click,
+    Move,
+    Scroll
+};
+
+// 鼠标事件监听器接口
+class MouseEventListener {
+public:
+    virtual void onMouseEvent(MouseEventType type, int x, int y) = 0;
+};
+
+// 鼠标事件分发器
+class MouseEventDispatcher {
+public:
+    // 注册鼠标事件监听器
+    void addListener(MouseEventListener* listener) {
+        listeners.push_back(listener);
+    }
+
+    // 模拟鼠标事件触发
+    void simulateMouseEvent(MouseEventType type, int x, int y) {
+        for (auto listener : listeners) {
+            listener->onMouseEvent(type, x, y);
+        }
+    }
+
+private:
+    std::vector<MouseEventListener*> listeners;
+};
+
+// 具体的鼠标事件监听器
+class ClickListener : public MouseEventListener {
+public:
+    void onMouseEvent(MouseEventType type, int x, int y) override {
+        if (type == MouseEventType::Click) {
+            std::cout << "Mouse Clicked at (" << x << ", " << y << ")" << std::endl;
+        }
+    }
+};
+
+class MoveListener : public MouseEventListener {
+public:
+    void onMouseEvent(MouseEventType type, int x, int y) override {
+        if (type == MouseEventType::Move) {
+            std::cout << "Mouse Moved to (" << x << ", " << y << ")" << std::endl;
+        }
+    }
+};
+
+int main() {
+    MouseEventDispatcher dispatcher;
+    ClickListener clickListener;
+    MoveListener moveListener;
+
+    dispatcher.addListener(&clickListener);
+    dispatcher.addListener(&moveListener);
+
+    // 模拟鼠标事件触发
+    dispatcher.simulateMouseEvent(MouseEventType::Click, 100, 200);
+    dispatcher.simulateMouseEvent(MouseEventType::Move, 150, 250);
+
+    return 0;
+}
+```
+
+在这个示例中，我们首先定义了鼠标事件类型（`MouseEventType`）和鼠标事件监听器接口（`MouseEventListener`）。然后，我们创建了一个鼠标事件分发器（`MouseEventDispatcher`），它可以注册监听器，并通过`simulateMouseEvent`函数模拟鼠标事件的触发。最后，我们创建了两个具体的鼠标事件监听器（`ClickListener`和`MoveListener`），并将它们注册到事件分发器中。
+
+当事件分发器调用`simulateMouseEvent`时，它会将事件分发给注册的监听器，监听器会根据事件类型执行相应的操作。
+
+这是一个非常简单的事件处理示例，实际的事件处理系统可能更加复杂，具体取决于您的应用程序需求。但这个示例可以帮助您理解事件处理的基本概念和实现方式。
+
+## C++ 设计模式 分发表
+
+在C++中，使用分发表（Dispatch Table）设计模式可以根据特定的输入键（如字符串或整数）来选择并执行不同的函数或操作。这种模式在实际编程中经常用于创建插件系统、命令模式、事件处理等场景，其中需要根据某种标识来动态选择和执行不同的功能。下面是一个简单的示例，演示如何使用分发表设计模式。
+
+首先，我们需要定义一个抽象基类，以及一组不同的子类，每个子类代表一个具体的操作或函数。然后，我们使用分发表将这些子类与特定的输入键相关联，以便根据输入键来执行相应的操作。
+
+```cpp
+#include <iostream>
+#include <unordered_map>
+#include <functional>
+
+// 抽象基类
+class Operation {
+public:
+    virtual void execute() = 0;
+};
+
+// 具体操作类
+class OperationA : public Operation {
+public:
+    void execute() override {
+        std::cout << "OperationA executed." << std::endl;
+    }
+};
+
+class OperationB : public Operation {
+public:
+    void execute() override {
+        std::cout << "OperationB executed." << std::endl;
+    }
+};
+
+class OperationC : public Operation {
+public:
+    void execute() override {
+        std::cout << "OperationC executed." << std::endl;
+    }
+};
+
+// 分发表类
+class DispatchTable {
+public:
+    using OperationCreator = std::function<Operation*()>;
+
+    void registerOperation(const std::string& key, OperationCreator creator) {
+        operationTable[key] = creator;
+    }
+
+    Operation* createOperation(const std::string& key) {
+        if (operationTable.find(key) != operationTable.end()) {
+            return operationTable[key]();
+        }
+        return nullptr;
+    }
+
+private:
+    std::unordered_map<std::string, OperationCreator> operationTable;
+};
+
+int main() {
+    DispatchTable dispatchTable;
+
+    // 注册具体操作类和对应的创建函数
+    dispatchTable.registerOperation("A", []() { return new OperationA(); });
+    dispatchTable.registerOperation("B", []() { return new OperationB(); });
+    dispatchTable.registerOperation("C", []() { return new OperationC(); });
+
+    // 根据输入键创建并执行操作
+    Operation* opA = dispatchTable.createOperation("A");
+    if (opA) {
+        opA->execute();
+        delete opA;
+    }
+
+    Operation* opB = dispatchTable.createOperation("B");
+    if (opB) {
+        opB->execute();
+        delete opB;
+    }
+
+    Operation* opX = dispatchTable.createOperation("X");
+    if (!opX) {
+        std::cout << "Operation not found." << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在上述示例中，我们首先定义了一个抽象基类 `Operation`，以及三个具体操作类 `OperationA`、`OperationB` 和 `OperationC`。然后，我们创建了一个 `DispatchTable` 类，它可以注册不同的操作类和相应的创建函数，并通过输入键来动态创建和执行不同的操作。
+
+这种分发表设计模式允许您根据特定的输入来选择和执行不同的操作，从而使程序更加灵活和可扩展。
+
+## C++ 分发表 策略模式 详解
+
+在C++中，分发表（Dispatch Table）和策略模式（Strategy Pattern）是两种常用的设计模式，用于处理不同情况下的分发和决策。下面详细解释这两个模式以及如何在C++中实现它们：
+
+### 分发表（Dispatch Table）
+
+分发表是一种数据结构，通常是一个数组或映射，它将函数指针或对象与不同的操作或事件相关联。这可以用于根据某些条件选择执行不同的操作。分发表通常用于处理消息传递、事件处理和动态行为定义等情况。
+
+#### 如何实现分发表：
+
+```cpp
+#include <iostream>
+#include <unordered_map>
+#include <functional>
+
+class Dispatcher {
+public:
+    using FunctionType = std::function<void()>;
+
+    void Register(const std::string& key, FunctionType func) {
+        dispatchTable[key] = func;
+    }
+
+    void Dispatch(const std::string& key) {
+        if (dispatchTable.find(key) != dispatchTable.end()) {
+            dispatchTable[key]();
+        } else {
+            std::cout << "Function not found for key: " << key << std::endl;
+        }
+    }
+
+private:
+    std::unordered_map<std::string, FunctionType> dispatchTable;
+};
+
+int main() {
+    Dispatcher dispatcher;
+    
+    dispatcher.Register("Function1", []() {
+        std::cout << "Function1 called." << std::endl;
+    });
+
+    dispatcher.Register("Function2", []() {
+        std::cout << "Function2 called." << std::endl;
+    });
+
+    dispatcher.Dispatch("Function1"); // Calls Function1
+    dispatcher.Dispatch("Function2"); // Calls Function2
+    dispatcher.Dispatch("Function3"); // Function not found
+    
+    return 0;
+}
+```
+
+在上面的示例中，我们创建了一个`Dispatcher`类，它使用`std::unordered_map`来存储不同函数的函数指针。然后，我们使用`Register`函数注册不同的函数，并使用`Dispatch`函数来根据给定的键调用相应的函数。
+
+### 策略模式
+
+策略模式是一种行为设计模式，它允许您在运行时选择算法或行为，而不需要修改客户端代码。在策略模式中，不同的策略封装为不同的类，客户端代码可以在运行时选择使用哪种策略。
+
+#### 如何实现策略模式：
+
+```cpp
+#include <iostream>
+
+// Strategy interface
+class PaymentStrategy {
+public:
+    virtual void pay(int amount) = 0;
+};
+
+// Concrete strategies
+class CreditCardPayment : public PaymentStrategy {
+public:
+    void pay(int amount) override {
+        std::cout << "Paid " << amount << " using credit card." << std::endl;
+    }
+};
+
+class PayPalPayment : public PaymentStrategy {
+public:
+    void pay(int amount) override {
+        std::cout << "Paid " << amount << " using PayPal." << std::endl;
+    }
+};
+
+// Context that uses the strategy
+class ShoppingCart {
+public:
+    ShoppingCart(PaymentStrategy* paymentStrategy) : paymentStrategy(paymentStrategy) {}
+
+    void checkout(int amount) {
+        paymentStrategy->pay(amount);
+    }
+
+private:
+    PaymentStrategy* paymentStrategy;
+};
+
+int main() {
+    CreditCardPayment creditCard;
+    PayPalPayment payPal;
+
+    ShoppingCart cart1(&creditCard);
+    ShoppingCart cart2(&payPal);
+
+    cart1.checkout(100);
+    cart2.checkout(50);
+
+    return 0;
+}
+```
+
+在上面的示例中，我们定义了一个`PaymentStrategy`接口，具体的支付策略（`CreditCardPayment`和`PayPalPayment`）实现了这个接口。然后，`ShoppingCart`类使用策略接口来完成支付，客户端代码可以在运行时选择不同的支付策略，而不需要修改`ShoppingCart`的代码。
+
+这两种模式都有助于将不同行为解耦，提高代码的可维护性和可扩展性。分发表用于根据键分发不同操作，而策略模式用于根据需要选择不同的算法或行为。您可以根据具体需求选择使用哪种模式，或者在某些情况下，它们可以结合使用以实现更复杂的逻辑。
+
 ## stdint.h 详解
 
 `stdint.h` 是 C 语言标准库中的一个头文件，它提供了一些固定大小的整数类型，以增强代码的可移植性和可读性。在不同的平台上，整数类型的大小可能会有所不同，为了确保代码在各种环境下都能正常工作，可以使用 `stdint.h` 中定义的整数类型。
