--- a/Grandhonor/Robot-协作机器人开发/vcr-doc/1-5_项目重构.md
+++ b/Grandhonor/Robot-协作机器人开发/vcr-doc/1-5_项目重构.md
@@ -49,6 +49,29 @@ struct a
     }
 ```
 
++ 目标结构
+  + url 格式 : /请求方式/设备类型/命令
+    + 请求方式：
+      + api, 发送请求数据，获取响应数据
+      + 待定，后续可能要获取图片
+    + 设备类型
+      + camera, 相机设备类型
+      + robot, 机械臂设备类型
+      + detector,检测器设备类型
+      + tool, 末端工具设备类型
+      + platform, 工作平台设备类型
+      + common, 通用设备类型
+    + 命令
+      + 各个设备的控制命令
+
++ 固定字段
+```json
+{
+    "?sn":"设备序列号，作为某个设备的全局唯一标识",
+    "sn":"string"
+}
+```
+
 ## 设备清单
 
 ```json 
