--- a/Grandhonor/rk_工地盒子/rk_doc/1-11_平台部署.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-11_平台部署.md
@@ -2,6 +2,16 @@
 
 + rk1126平台部署
 
+## 最初无锡两个盒子
+
++ 192.169.5.57
++ 192.169.5.58 
++ 2023.10.07 日收到
+
+## 串口调试
+
++ windows下 modaXterm 工具 波特率为 1500000
+
 ## 动态ip申请
 
 + 使用 1000M 网口作为静态IP，电脑通过网线 直连 到盒子，设置同一网段，内部登陆盒子界面
@@ -29,7 +39,7 @@ apt install iputils-ping
 
 + 启动容器命令
 ```bash 
-docker run -d --privileged=true --restart=always --network=host -v /userdata/:/userdata/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  -p 8000:8000 -p 8001:8001 -p 10022:10022 -p 10008:10008 -p 10009:10009 -p 10010:10010 -p 10011:10011 -p 10012:10012 -p 10013:10013 -p 17008:17008 -p 17009:17009 rk1126:20230818 /bin/bash /data/static/bash/auto-run.sh
+docker run -d --privileged=true --restart=always --network=host -v /userdata/:/userdata/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  -p 8000:8000 -p 8001:8001 -p 10022:10022 -p 10008:10008 -p 10009:10009 -p 10010:10010 -p 10011:10011 -p 10012:10012 -p 10013:10013 -p 17008:17008 -p 17009:17009 rk1126:20230915 /bin/bash /data/static/bash/auto-run.sh
 ```
 
 + 打包命令
