--- a/Books/设计模式_可复用面向对象软件的基础.md
+++ b/Books/设计模式_可复用面向对象软件的基础.md
@@ -238,3 +238,28 @@
   + 名字约定要一致
 
 + 实现执行模式中责任和写作的操作
+
+## 第二章 实例研究： 设计一个文档编辑器
+
+### 递归组合
+
++ 层次结构信息的表述通常是通过一种被称为递归组合(Recursive Composition)的技术来实现的。
++ 递归组合可以由较简单的元素逐渐建立复杂的元素，是我们通过简单图形元素构造文档的方法之一。
+
+## 第三章 创建型模式
+
++ 创建型模式抽象了实例化过程。它们帮助一个系统独立于如何创建，组合和表示它的哪些对象。一个类创建型模式使用继承改变被实例化的类，而一个对象创建型模式将实例化委托给另一个对象。
+
++ 创建型模式在什么被创建，谁创建它，它是怎样被创建的，以及何时创建这方面给予很大的灵活性。它们允许你用结构和功能差别很大的产品对象配置一个系统。配置可以是静态的(即在编译时指定的)，也可以是动态的(在运行时)
+
+### ABSTRACT FACTORY(抽象工厂) -- 对象创建型模式
+
++ 意图：
+  + 提供一个创建一系列相关或相互依赖对象的接口，而无需指定他们具体的类
+
++ 别名：
+  + Kit
+
++ 动机
+  + 考虑一个支持多种视感(look-and-feel)标准的用户界面工具包。不同的视感风格，为诸如滚动条，窗口和按钮等用户界面"窗口组件"定义不同的外观和行为。
+  + 为保证视感风格标准间的可移植性，一个应用不应该为一个特定的视感外观硬编码它的窗口组件。在整个应用中实例化特定视感风格的窗口组件类将使得以后很难改变视感风格
