优化C++笔记，增加资金笔记

--- a/CPP/C-C++05_理论基础.md
+++ b/CPP/C-C++05_理论基础.md
@@ -2,6 +2,41 @@
 
 + C++ 相关的理论基础知识
 
+## C++ 结构体可以直接赋值吗
+
+C++ 中的结构体（struct）可以进行直接赋值，但在赋值过程中会复制结构体的所有成员的值。这意味着一个结构体的内容可以复制到另一个结构体中，但它们之间是相互独立的，修改一个结构体的内容不会影响另一个结构体的内容。以下是一个简单的示例：
+
+```cpp
+#include <iostream>
+
+struct Point {
+    int x;
+    int y;
+};
+
+int main() {
+    Point p1 = {1, 2};
+    Point p2;
+
+    p2 = p1; // 直接赋值，将 p1 的内容复制到 p2
+
+    std::cout << "p1.x: " << p1.x << " p1.y: " << p1.y << std::endl;
+    std::cout << "p2.x: " << p2.x << " p2.y: " << p2.y << std::endl;
+
+    // 修改 p1 不会影响 p2
+    p1.x = 3;
+
+    std::cout << "p1.x: " << p1.x << " p1.y: " << p1.y << std::endl;
+    std::cout << "p2.x: " << p2.x << " p2.y: " << p2.y << std::endl;
+
+    return 0;
+}
+```
+
+在上面的示例中，首先创建了一个名为 `p1` 的结构体，并将其初始化为 `{1, 2}`。然后，通过 `p2 = p1;` 将 `p1` 的内容复制到 `p2`，这样 `p2` 的内容就与 `p1` 相同。但之后修改 `p1.x` 的值不会影响 `p2.x` 的值，因为它们是相互独立的。
+
+如果要实现结构体之间的浅拷贝（复制指向相同数据的指针或引用），或者实现自定义的赋值行为，您可能需要重载结构体的赋值运算符 `=`。这可以允许您自定义赋值的行为以满足特定的需求。
+
 ## C++ 事件分发器 用类对象进行事件分发
 
 在C++中，您可以创建一个事件分发器（Event Dispatcher）类，用于将事件分发给不同的事件处理对象（类对象）。以下是一个简单示例，演示如何使用类对象进行事件分发：
