--- a/FFmpeg/3_1_常用技巧.md
+++ b/FFmpeg/3_1_常用技巧.md
@@ -1,7 +1,17 @@
+## 简介
+
++ ffmpeg 常用技巧
+
+## ffmpeg 安装
+
++ 下载FFmpge源代码 `http://ffmpeg.org/download.html`
++ 安装依赖库 `yasm  libsdl1.2-dev libsdl2-dev`
++ 编译安装  `./configure --prefix=/usr/local/ffmpeg && make && make install`
+
+
 ## 使用ffserver 将本地视频转为rtsp视频流
 
 + 配置
-
 ```
     HTTPPort 9554
     RTSPPort 554
