--- a/Grandhonor/rk_工地盒子/rk_doc/1-13_NVR视频转发.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-13_NVR视频转发.md
@@ -7,3 +7,84 @@
 + rtsp://admin:a1234567@192.169.7.123:554
 
 + ./vca.exe --service-mode 0 --id aaa --detector-conf-inline --detector-conf @--detector-models@/data/static/models/HELMET/DETECT.conf@xxxx@yyyy@ --input-video-name rtsp://admin:a1234567@192.169.7.123:554 
+
+## nvr
+
++ 帮助信息
+```
+nvr.exe 版本 6.2.11
+
+一般选项：
+
+        --help [ BRANCH ]
+                打印帮助信息。
+
+                version: 仅版本信息。
+                all: 全部信息。
+
+日志选项：
+
+        --log-verbose
+                记录详细日志。默认：记录重要日志
+
+任务选项：
+
+        --input-fmt < FORMAT >
+                输入媒体格式。
+
+        --input-uri < URI >
+                输入媒体地址。
+
+        --input-timeout < SECONDS >
+                输入媒体超时时长(秒)。默认：30
+
+        --input-retry < SECONDS >
+                输入媒体断开重连间隔(秒)。默认：15
+
+        --input-xspeed < RATIO >
+                输入媒体倍速。默认：1.0
+
+        --record-name < NAME >
+                录像文件的名称(包括路径)。
+
+        --record-duration < SECONDS >
+                录像文件的时长(秒)。默认：60
+
+        --record-count < COUNT >
+                录像文件的保留数量。默认：65535
+
+        --publish-fmt < FORMAT >
+                推流的格式。
+
+        --publish-uri < URI >
+                推流的地址。
+
+服务选项：
+
+        --daemon
+                启用后台驻留模式。
+                注：此功能不支持supervisor守护或类似的工具。
+
+        --getway-listen < ADDRESS > 
+                网关监听地址。默认：0.0.0.0:37008
+
+        --work-path < PATH >
+                工作路径。默认:/tmp/nvr/
+
+客户端选项：
+
+        --cmd  < COMMAND >
+                命令。
+                1：输入测试
+                2：任务列表
+                3：添加任务
+                4：删除任务
+
+客户端请求样例：
+
+        curl -d '@Params.txt' -H 'Content-Type: text/plain' http://server.vam:27008/api
+                Params.txt: 明文参数文件，参数的键带前缀
+
+        curl -d '@Params.txt' -H 'Content-Type: application/x-www-form-urlencoded' http://server.vam:27008/api
+                Params.txt: 表单参数文件，参数的键不带前缀
+```
