--- a/Grandhonor/rk_工地盒子/rk_doc/1-13_NVR视频转发.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-13_NVR视频转发.md
@@ -88,3 +88,14 @@ nvr.exe 版本 6.2.11
         curl -d '@Params.txt' -H 'Content-Type: application/x-www-form-urlencoded' http://server.vam:27008/api
                 Params.txt: 表单参数文件，参数的键不带前缀
 ```
+
+## 流程
+
++ 先启动 MediaServer 服务
+  + 目录：
+    + 3party/GENERAL/x86_64-linux-gnu/gcc-9/bin/MediaServer
+
++ 启动 nvr.exe 服务
+  + 添加任务
+    + --publish-fmt flv
+    + --publish-uri rtmp://192.169.4.16:1935/live/123
