--- a/Grandhonor/vca_视频结构化引擎/vca_doc/1_1_项目基础.md
+++ b/Grandhonor/vca_视频结构化引擎/vca_doc/1_1_项目基础.md
@@ -4,3 +4,22 @@
 
 + 命令：
   +  git submodule update --init --remote  --force  --merge --recursive
+
+## ubuntu 18.04 环境依赖
+
++ ubuntu-18.04-x86_64-NVIDIA需要以下运行环境：
+  + libgomp1 
+  + libzmq5 
+  + libjsoncpp1 
+  + libhiredis0.13 
+  + libsdl2-2.0-0 
+  + liblapacke 
+  + libatlas-base-dev 
+  + libuuid1
+  + zlib1g 
+  + librdkafka1 
+  + libeigen3-dev
+  + nvidia
+    + cuda_11.4.4_470.82.01_linux
+    + cudnn-11.4-linux-x64-v8.2.4.15
+    + TensorRT-8.2.5.1.Linux.x86_64-gnu.cuda-11.4.cudnn8.2
