--- a/Grandhonor/rk_工地盒子/rk_doc/1-11_平台部署.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-11_平台部署.md
@@ -39,7 +39,7 @@ apt install iputils-ping
 
 + 启动容器命令
 ```bash 
-docker run -d --privileged=true --restart=always --network=host -v /userdata/:/userdata/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  -p 8000:8000 -p 8001:8001 -p 10022:10022 -p 10008:10008 -p 10009:10009 -p 10010:10010 -p 10011:10011 -p 10012:10012 -p 10013:10013 -p 17008:17008 -p 17009:17009 rk1126:20231017 /bin/bash /data/static/bash/auto-run.sh
+docker run -d --privileged=true --restart=always --network=host -v /userdata/:/userdata/ -v /dev/galcore:/dev/galcore -v /usr/:/rk_usr/ --device=/dev/galcore  rk1126:20231026 /bin/bash /data/static/bash/auto-run.sh
 ```
 
 + 打包命令
