--- a/Personal/资金.md
+++ b/Personal/资金.md
@@ -22,6 +22,41 @@
 
 + 工资： 7343.25
 
++ 10月01日 - 10月31日
+  + 餐饮 575.55
+  + 房租 555
+  + 购物 431.30
+  + 其他 368.6
+    + 和购物相同
+  + 服务 124
+  + 服饰 99
+  + 运动 47
+  + 交通 15
+  + 旅行 12
++ 10月总计：2227.45
+
++ 11月01日-11月10日
+  + 餐饮 214.11
+  + 购物 169.50
+    + 闲趣坊
+    + 超市
+  + 娱乐 60
+    + 大润发 游戏厅
+  + 其他 37.10
++ 十一月十天总计：495.71
+
++ 支付宝：864.34 + 2000 = 2864.34
+
++ 招商银行：11041.13
++ 农业银行：2672.23
++ 招商信用卡：-458.70
+
++ 总计
+  + 13254.66
+
++ 计划
+  + 工资 7343.25 - 预计花销 2230 = 存款 5113.25 + 现有存款 13254.66 = 总计 18367.91
+
 ## 2023.12.10 
 
 + 工资： 7343.25
