--- a/Personal/资金.md
+++ b/Personal/资金.md
@@ -56,6 +56,15 @@
 + 总计
   + 13254.66
 
++ 2023.11.24 统计
+  + 农业银行 5171.21
+    + 租房补贴进账 2499
+  + 支付宝
+    + 转账 3000
+  + 招商银行： 2556.04
+  + 总计：
+    + 5171.21 + 2556.04 + 3000 = 10727.25
+
 + 计划
   + 工资 7343.25 - 预计花销 2230 = 存款 5113.25 + 现有存款 13254.66 = 总计 18367.91
 
