--- a/C/C_3_常用函数/C_3_2_常用函数.md
+++ b/C/C_3_常用函数/C_3_2_常用函数.md
@@ -194,3 +194,45 @@ int main() {
 在上面的示例中，我们首先使用`inet_pton()`函数将字符串形式的IPv4地址转换为`struct in_addr`结构体（网络字节序）。然后，我们使用`inet_ntoa()`函数将该结构体转换为点分十进制形式的字符串，并打印出来。
 
 需要注意的是，由于`inet_ntoa()`使用静态缓冲区，如果需要在同一线程中多次使用它或保留转换后的字符串内容，最好将其复制到自己管理的内存中，以避免数据覆盖问题。
+
+## sscanf()
+
+`sscanf()` 函数是 C 语言标准库 `<stdio.h>` 中的一个函数，用于从字符串中按照格式化字符串提取数据，类似于 `scanf()` 函数。它的作用是从一个字符串中解析数据，将解析的结果按照指定格式存储到给定的变量中。
+
+函数原型如下：
+
+```c
+int sscanf(const char *str, const char *format, ...);
+```
+
+- `str` 是一个指向要解析的输入字符串的指针。
+- `format` 是一个格式字符串，规定了解析 `str` 中数据的方式。
+- 可变参数表示要将解析出的数据存储的位置。
+
+`sscanf()` 会尝试按照指定的格式从输入字符串 `str` 中读取数据，并根据格式字符串 `format` 的定义将数据转换为相应类型。它会跳过空白字符（空格、制表符等），然后根据 `format` 字符串的指示进行解析。
+
+以下是一个示例：
+
+```c
+#include <stdio.h>
+
+int main() {
+    const char *input_string = "Age: 30, Height: 175.5, Weight: 70.2";
+
+    int age;
+    float height, weight;
+
+    // 使用 sscanf() 从字符串中提取数据
+    sscanf(input_string, "Age: %d, Height: %f, Weight: %f", &age, &height, &weight);
+
+    printf("Age: %d\n", age);
+    printf("Height: %.1f\n", height);
+    printf("Weight: %.1f\n", weight);
+
+    return 0;
+}
+```
+
+在上述示例中，`sscanf()` 函数从字符串 `input_string` 中读取数据。`"Age: %d, Height: %f, Weight: %f"` 指示了解析字符串的格式，分别提取整数、浮点数和浮点数，并将它们存储在 `age`、`height` 和 `weight` 变量中。
+
+需要注意的是，`sscanf()` 在解析字符串时，要确保格式字符串与输入字符串的格式相匹配，否则可能会导致意外的行为或错误的解析结果。此外，也要注意输入数据的有效性和边界情况，以防止缓冲区溢出等问题。
