--- a/Personal/资金.md
+++ b/Personal/资金.md
@@ -72,6 +72,23 @@
 
 + 工资： 7343.25
 
++ 2023.12.23 统计
+  + 农业银行 5171.21
+  + 招商银行 5874.36
+  + 总计:
+    + 5171.21 + 5874.36 = 11045.57
+  + 大额消费:
+    + 房租: 600
+    + 九价最后一针: 1418
+
++ 上次计划
+  + 2023.11.24实际资金: 5171.21 + 2556.04 = 7727.25
+  + 2023.12.24实际资金: 5171.21 + 5874.36 = 11045.57
+  + 存款为: 11045.57 - 7727.25 = 3318.32
+
++ 本次计划
+  + 工资7343.25 - 预计花销 2000 = 存款 5113.25 + 现有存款 11045.57 = 总计 16158.83
+
 ## 2024.1.10 
 
 + 工资： 7343.25
