--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -22,7 +22,11 @@ scp user@192.169.4.16:${path}${program} /userdata/
 
 cd /userdata/
 
-tar -zxf ${program} .
+pwd
+
+echo "tar -zxf ${program}"
+
+eval "tar -zxf ${program}"
 
 rm ${program}
 ```
@@ -89,5 +93,5 @@ curl -X POST --data-urlencode 'cmd=1' http://127.0.0.1:17008/api
 curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=oc0R1' http://127.0.0.1:17008/api
 
 # 删除任务
-curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=aybsD' http://127.0.0.1:17008/api
+curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=40gA9' http://127.0.0.1:17008/api
 ```
