--- a/Grandhonor/Robot-协作机器人开发/vcr-doc/1-10_任务指令解析.md
+++ b/Grandhonor/Robot-协作机器人开发/vcr-doc/1-10_任务指令解析.md
@@ -20,4 +20,20 @@
 + 动态抓取/码垛
 + 打磨
 
-## 先实现静态拆垛/码垛任务
+## ~~先实现静态拆垛/码垛任务~~
+
+## 设计解析器
+
++ 算子      关键字(key_word)
++ 启动      start
++ 停止      stop
++ ML        move_line
++ MJ        move_joint
++ 抓        catch
++ 放        release
++ 暂停      pause
++ ERRNO     error_num
++ 计时器    timer
++ 计数器    counter
++ while     while
++ if        if
