--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -65,8 +65,31 @@ FRPC
 ```bash
 #! /bin/bash 
 
+# 创建任务
+curl --location --request POST 'http://127.0.0.1:8000/api/setting/task/add' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 192.169.5.61:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "name":"安全帽检测",
+    "start":1,
+    "source":10,
+    "schedulerType":"Daemon",
+    "models":{
+        "id":3,
+        "duration":" ",
+        "start":" ",
+        "end":" "
+    }
+}'
+
 # 停止任务
 curl -X POST --data "{\"id\":\"Qk99V\"}" http://127.0.0.1:8000/api/setting/task/stop
+
+# 删除任务
+curl -X POST --data "{\"ids\":[\"qfNY7\"]}" http://127.0.0.1:8000/api/setting/task/delete
 
 # 启动任务
 curl -X POST --data "{\"id\":\"Qk99V\"}" http://127.0.0.1:8000/api/setting/task/start
@@ -77,8 +100,42 @@ curl -X GET http://127.0.0.1:8000/api/setting/task/list
 # 相机列表
 curl -X GET http://127.0.0.1:8000/api/setting/camera/list
 
+# 创建相机
+curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 192.169.5.61:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "name": "门卫室",
+    "url":"rtsp://admin:qwer1234@192.168.10.242:554/h264/ch1/main/av_stream"
+}'
+
 # 清除所有告警记录并删除文件
 curl -X GET http://127.0.0.1:8000/api/setting/warning_record/clear
+
+# 算法列表
+curl -X GET http://127.0.0.1:8000/api/setting/algorithm/list
+
+# 管理平台列表
+curl -X GET http://127.0.0.1:8000/api/device/listCloudPlatform
+
+# 创建管理平台
+curl --location --request POST 'http://127.0.0.1:8000/api/device/addCloudPlatform' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 192.169.5.61:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "name": "test112",
+    "type": "event_push",
+    "address": "https://wisdom.aotusoft.net/wisdom/aibox/upload",
+    "appKeyId": "afa",
+    "appKeySecret": "1111"
+}'
+
 ```
 
 ## vca script
