--- a/Grandhonor/Robot-协作机器人开发/vcr-doc/1-10_任务指令解析.md
+++ b/Grandhonor/Robot-协作机器人开发/vcr-doc/1-10_任务指令解析.md
@@ -24,8 +24,8 @@
 
 ## 设计解析器
 
-+ 算子      关键字(key_word)
-+ 启动      start
++ 算子      关键字(key_word)    
++ 启动      start           
 + 停止      stop
 + ML        move_line
 + MJ        move_joint
@@ -37,3 +37,5 @@
 + 计数器    counter
 + while     while
 + if        if
+
++ 参考JSON数据结构： ./data/task.json
