--- a/C++/C++_01_语言基础/C++_01_2_语言基础.md
+++ b/C++/C++_01_语言基础/C++_01_2_语言基础.md
@@ -31,7 +31,7 @@ int main() {
 
 请注意以下几点关于默认参数的注意事项：
 
-1. 默认参数必须从右向左添加。也就是说，如果您在函数参数列表中为某个参数指定默认值，那么该参数右侧的所有参数都必须有默认值。例如，`void func(int a, int b = 0)` 是有效的，但 `void func(int a = 0, int b)` 是无效的。
+1. 默认参数必须从右向左添加。也就是说，**如果您在函数参数列表中为某个参数指定默认值，那么该参数右侧的所有参数都必须有默认值**。例如，`void func(int a, int b = 0)` 是有效的，但 `void func(int a = 0, int b)` 是无效的。
 
 2. 一旦为某个参数指定了默认值，后续的参数都必须有默认值，无法再定义没有默认值的参数。这是因为在函数调用时，如果您省略了参数，编译器无法确定省略的参数是哪个。
 
