--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -136,6 +136,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/device/addCloudPlatfor
     "appKeySecret": "1111"
 }'
 
+curl -X GET http://127.0.0.1:8000/api/device/info
+
 ```
 
 ## vca script
