--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -149,7 +149,7 @@ curl -X GET http://127.0.0.1:8000/api/device/info
 curl -X POST --data-urlencode 'cmd=1' http://127.0.0.1:17008/api
 
 # 查询任务状态
-curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=oc0R1' http://127.0.0.1:17008/api
+curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=AY6G5' http://127.0.0.1:17008/api
 
 # 删除任务
 curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=40gA9' http://127.0.0.1:17008/api
