--- a/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-19_项目配置.md
@@ -123,3 +123,96 @@
     "total_page":1
 }
 ```
+
+## gh-rk-1008
+
++ frp
+  + ssh -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1001:22,proxyport=5002' root@47.100.31.121
+
++ 任务列表
+```json
+{
+    "code":0,
+    "curr_page":1,
+    "list":[
+        {
+            "id":"4901F",
+            "models":{
+                "duration":"",
+                "end":"",
+                "id":3,
+                "name":"安全帽检测",
+                "start":""
+            },
+            "name":"安全帽",
+            "running":0,
+            "schedulerType":"Daemon",
+            "source":7,
+            "start":1
+        }
+    ],
+    "total_count":1,
+    "total_page":1
+}
+```
+
++ 相机列表
+```json
+{
+    "code":0,
+    "curr_page":1,
+    "list":[
+        {
+            "id":7,
+            "name":"安全帽",
+            "updatedtime":"2023-12-27 10:2:51",
+            "url":"rtsp://admin:qdek2018@192.168.0.51:554/h265/ch1/main/av_stream",
+            "url_suffix":"/live/L8n16"
+        }
+    ],
+    "total_count":0,
+    "total_page":1
+}
+```
+
++ 管理平台列表
+
++ 算法列表
+```json
+{
+    "code":0,
+    "curr_page":1,
+    "list":[
+        {
+            "id":1,
+            "name":"烟火检测",
+            "product":"loya",
+            "updatedtime":"2023-7-26 2:16:54",
+            "vendor":"loya"
+        },
+        {
+            "id":2,
+            "name":"区域入侵检测",
+            "product":"loya",
+            "updatedtime":"2023-7-26 14:18:33",
+            "vendor":"loya"
+        },
+        {
+            "id":3,
+            "name":"安全帽检测",
+            "product":"loya",
+            "updatedtime":"2023-7-26 14:20:9",
+            "vendor":"loya"
+        },
+        {
+            "id":4,
+            "name":"反光衣检测",
+            "product":"loya",
+            "updatedtime":"2023-7-26 14:21:32",
+            "vendor":"loya"
+        }
+    ],
+    "total_count":4,
+    "total_page":1
+}
+```
