--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -108,8 +108,8 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 --header 'Host: 192.169.5.61:8000' \
 --header 'Connection: keep-alive' \
 --data-raw '{
-    "name": "门卫室",
-    "url":"rtsp://admin:qwer1234@192.168.10.242:554/h264/ch1/main/av_stream"
+    "name": "安全帽",
+    "url":"rtsp://admin:qdek2018@192.168.0.51:554/h265/ch1/main/av_stream"
 }'
 
 # 清除所有告警记录并删除文件
