--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -115,6 +115,17 @@ curl --location --request POST 'http://127.0.0.1:8000/api/setting/camera/add' \
 # 清除所有告警记录并删除文件
 curl -X GET http://127.0.0.1:8000/api/setting/warning_record/clear
 
+# 查看最新告警
+curl --location --request POST 'http://127.0.0.1:8000/api/setting/warning_record/latest' \
+--header 'User-Agent: Apifox/1.0.0 (https://apifox.com)' \
+--header 'Content-Type: application/json' \
+--header 'Accept: */*' \
+--header 'Host: 127.0.0.1:8000' \
+--header 'Connection: keep-alive' \
+--data-raw '{
+    "count": 20
+}'
+
 # 算法列表
 curl -X GET http://127.0.0.1:8000/api/setting/algorithm/list
 
@@ -149,7 +160,7 @@ curl -X GET http://127.0.0.1:8000/api/device/info
 curl -X POST --data-urlencode 'cmd=1' http://127.0.0.1:17008/api
 
 # 查询任务状态
-curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=AY6G5' http://127.0.0.1:17008/api
+curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=79Tli' http://127.0.0.1:17008/api
 
 # 删除任务
 curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=40gA9' http://127.0.0.1:17008/api
