update python note and work note

--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -2,6 +2,14 @@
 
 + rk平台软件版本发行
 
+## mnc 守护进程
+
++ 更新source源为清华源
++ apt下载python3-dev python3-pip
++ python3下载psutil
++ 拷贝watch_thread.py和restart_mnc.sh到/data/static/bash/
++ 更新/data/static/bash/auto-start.sh,增加 python3 /data/static/bash/watch_thread.py
+
 ## ip配置服务
 
 + 软件路径: /mnt/remote/190-mnt/zhangpengcheng/Release/abcdk/latest
