update ffmpeg note

--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -173,3 +173,24 @@ curl -X POST --data-urlencode 'cmd=6' --data-urlencode 'id=79Tli' http://127.0.0
 # 删除任务
 curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=40gA9' http://127.0.0.1:17008/api
 ```
+
+## ffmpeg record video
+
++ 视频录制
+```bash
+
+# gh-rk-1012
+./ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/ZbrZW -c copy -an -f mp4 -t 00:01:00 /userdata/zzz.mp4
+
+# gh-rk-1008
+./ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/Vr3fq -c copy -an -f mp4 -t 00:01:00 /userdata/vvv.mp4
+```
+
++ 视频拷贝
+```bash
+# gh-rk-1012
+scp -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1012:22,proxyport=5002' root@47.100.31.121:/userdata/zzz.mp4 .
+
+# gh-rk-1008
+scp -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1008:22,proxyport=5002' root@47.100.31.121:/userdata/vvv.mp4 .
+```
