update linux command note

--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -178,19 +178,29 @@ curl -X POST --data-urlencode 'cmd=4' --data-urlencode 'id=40gA9' http://127.0.0
 
 + 视频录制
 ```bash
+# clear ssh known hosts
+ssh-keygen -f "/home/user/.ssh/known_hosts" -R "47.100.31.121"
+
+# update environment
+source /data/static/bash/source.sh
 
 # gh-rk-1012
-./ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/ZbrZW -c copy -an -f mp4 -t 00:01:00 /userdata/zzz.mp4
+/data/edge/VideoProcess/3party/bin/ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/ZbrZW -c copy -an -f mp4 -t 00:01:00 /userdata/zzz.mp4
 
 # gh-rk-1008
-./ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/Vr3fq -c copy -an -f mp4 -t 00:01:00 /userdata/vvv.mp4
+/data/edge/VideoProcess/3party/bin/ffmpeg -rtsp_transport tcp -i rtsp://127.0.0.1:554/live/Vr3fq -c copy -an -f mp4 -t 00:01:00 /userdata/vvv.mp4
 ```
 
 + 视频拷贝
 ```bash
 # gh-rk-1012
-scp -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1012:22,proxyport=5002' root@47.100.31.121:/userdata/zzz.mp4 .
+ls /home/user/zjy-190/Videos/gh-rk-1012/
+mv /home/user/zjy-190/Videos/gh-rk-1012/zzz.mp4 /home/user/zjy-190/Videos/gh-rk-1012/zzz_4.mp4
+scp -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1012:22,proxyport=5002' root@47.100.31.121:/userdata/zzz.mp4 /home/user/zjy-190/Videos/gh-rk-1012/
+ffplay /home/user/zjy-190/Videos/gh-rk-1012/zzz.mp4
 
 # gh-rk-1008
-scp -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1008:22,proxyport=5002' root@47.100.31.121:/userdata/vvv.mp4 .
+ls /home/user/zjy-190/Videos/gh-rk-1008/
+mv /home/user/zjy-190/Videos/gh-rk-1008/vvv.mp4 /home/user/zjy-190/Videos/gh-rk-1008/vvv_2.mp4
+scp -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1008:22,proxyport=5002' root@47.100.31.121:/userdata/vvv.mp4 /home/user/zjy-190/Videos/gh-rk-1008/
 ```
