--- a/Grandhonor/Robot-协作机器人开发/vcr-doc/1-13_作业算法.md
+++ b/Grandhonor/Robot-协作机器人开发/vcr-doc/1-13_作业算法.md
@@ -4,7 +4,157 @@
 
 ## 静态抓取
 
++ 示例:
+```json
+{
+    "task_id": [
+        {
+            "key_word": "start"
+        },
+        {
+            "key_word": "task_static_catch",
+            "argument_robot_id": "11474915599209436650",
+            "argument_camera_id": "9594966076229215493",
+            "argument_tool_id": "9731621822652897745",
+            "argument_vision_algorithm_id": "16096425151749075727",
+            "argument_static_catch_home_point_target": [
+                0,
+                0,
+                0,
+                0,
+                0,
+                0
+            ],
+            "argument_static_catch_place_point_target": [
+                1.57,
+                0,
+                1.57,
+                0,
+                1.57,
+                0
+            ],
+            "argument_static_catch_joint_reference_target": [
+                0,
+                0,
+                1.57,
+                0,
+                1.57,
+                0
+            ],
+            "argument_static_catch_catch_speed_percent": 40,
+            "counter_condition": 10,
+            "argument_static_catch_place_point_target_array": [
+                [
+                    1.57,
+                    0,
+                    1.57,
+                    0,
+                    1.57,
+                    0
+                ],
+                [
+                    1.57,
+                    0,
+                    1.57,
+                    0,
+                    1.57,
+                    0.78
+                ],
+                [
+                    1.57,
+                    0,
+                    1.57,
+                    0,
+                    1.57,
+                    1.57
+                ]
+            ]
+        },
+        {
+            "key_word": "stop"
+        }
+    ]
+}
+```
+
 ## 动态抓取
+
++ 示例
+```json
+{
+    "task_id": [
+        {
+            "key_word": "start"
+        },
+        {
+            "key_word": "task_dynamic_catch",
+            "argument_robot_id": "10752341407161439024",
+            "argument_camera_id": "9594966076229215493",
+            "argument_tool_id": "9731621822652897745",
+            "argument_vision_algorithm_id": "16096425151749075727",
+            "counter_condition": 10,
+            "argument_dynamic_catch_catch_speed_percent": 40,
+            "argument_dynamic_catch_z_offset": 0.03,
+            "argument_dynamic_catch_catch_distance": 0.26,
+            "argument_dynamic_catch_relative_velocity": 20,
+            "argument_dynamic_catch_target_velocity": 0.0912,
+            "argument_dynamic_catch_home_point_target": [
+                0,
+                0,
+                0,
+                0,
+                0,
+                0
+            ],
+            "argument_dynamic_catch_place_point_target": [
+                1.57,
+                0,
+                1.57,
+                0,
+                1.57,
+                0
+            ],
+            "argument_dynamic_catch_joint_reference_target": [
+                0,
+                0,
+                1.57,
+                0,
+                1.57,
+                0
+            ],
+            "argument_dynamic_catch_place_point_target_array": [
+                [
+                    1.57,
+                    0,
+                    1.57,
+                    0,
+                    1.57,
+                    0
+                ],
+                [
+                    1.57,
+                    0,
+                    1.57,
+                    0,
+                    1.57,
+                    0.78
+                ],
+                [
+                    1.57,
+                    0,
+                    1.57,
+                    0,
+                    1.57,
+                    1.57
+                ]
+            ]
+        },
+        {
+            "key_word": "stop"
+        }
+    ]
+}
+```
 
 ### 传送带
 
