update math module

--- a/Math/机器人领域.md
+++ b/Math/机器人领域.md
@@ -2,6 +2,28 @@
 
 + 机器人学中的数学
 
+## 工业机器人领域使用到的数学
+
+工业机器人领域涉及到多个数学分支，这些数学工具用于机器人的建模、运动规划、控制系统设计等方面。以下是在工业机器人领域常用的数学：
+
+1. **线性代数（Linear Algebra）：** 工业机器人中广泛使用线性代数来表示和处理坐标变换、运动学和动力学问题。矩阵和向量的运算在描述机器人的位姿、关节角度以及执行器的运动方面非常有用。
+
+2. **几何学（Geometry）：** 机器人的运动学建模涉及到坐标系变换、旋转矩阵、齐次坐标等几何概念。几何学的知识用于描述和计算机器人末端执行器的位置和姿态。
+
+3. **微积分（Calculus）：** 运动规划、轨迹生成和优化算法通常需要微积分的方法。例如，对机器人的路径进行优化时，需要计算速度、加速度等。
+
+4. **数值分析（Numerical Analysis）：** 工业机器人控制系统通常需要进行数值计算，如逆运动学求解、路径规划、动力学模拟等。数值分析提供了有效和稳定的算法来解决这些问题。
+
+5. **控制理论（Control Theory）：** 控制理论用于设计机器人的控制系统，包括反馈控制、PID控制器、状态空间控制等。这些方法有助于保持机器人在目标轨迹上的准确性和稳定性。
+
+6. **优化理论（Optimization Theory）：** 优化方法在工业机器人中的应用很广泛，例如路径规划、运动优化、参数优化等。这有助于提高机器人的效率和性能。
+
+7. **刚体运动学（Rigid Body Kinematics）：** 刚体运动学用于描述机器人末端执行器的位置、速度和加速度，以及机器人关节的运动学性质。
+
+8. **机器学习和人工智能（Machine Learning and AI）：** 近年来，机器学习和人工智能在机器人领域的应用逐渐增多，包括视觉识别、自主导航、智能控制等。
+
+这些数学工具的综合运用使得工业机器人能够执行更复杂、精确和灵活的任务，提高了生产效率和质量。
+
 ## 弧度和角度转换关系
 
 弧度（radians）和角度（degrees）之间的转换关系可以通过以下公式表示：
