--- a/Grandhonor/Robot-协作机器人开发/vcr-doc/1-13_作业算法.md
+++ b/Grandhonor/Robot-协作机器人开发/vcr-doc/1-13_作业算法.md
@@ -93,11 +93,57 @@
             "argument_tool_id": "9731621822652897745",
             "argument_vision_algorithm_id": "16096425151749075727",
             "counter_condition": 10,
-            "argument_dynamic_catch_catch_speed_percent": 40,
+            "argument_dynamic_catch_catch_speed_percent": 80,
             "argument_dynamic_catch_z_offset": 0.03,
             "argument_dynamic_catch_catch_distance": 0.26,
             "argument_dynamic_catch_relative_velocity": 20,
             "argument_dynamic_catch_target_velocity": 0.0912,
+            "argument_dynamic_catch_must_in_pause_if_no_target":false,
+            "argument_dynamic_catch_must_in_pause_if_no_place":true,
+            "argument_dynamic_catch_detect_area": [
+                [
+                    -0.5,
+                    -0.2,
+                    0
+                ],
+                [
+                    -0.5,
+                    -0.7,
+                    0
+                ],
+                [
+                    0.1,
+                    -0.2,
+                    0.1
+                ],
+                [
+                    0.1,
+                    -0.7,
+                    0.1
+                ]
+            ],
+            "argument_dynamic_catch_grap_area": [
+                [
+                    -0.15,
+                    -0.2,
+                    0
+                ],
+                [
+                    -0.15,
+                    -0.6,
+                    0
+                ],
+                [
+                    0.45,
+                    -0.2,
+                    0.1
+                ],
+                [
+                    0.45,
+                    -0.6,
+                    0.1
+                ]
+            ],
             "argument_dynamic_catch_home_point_target": [
                 0,
                 0,
@@ -124,28 +170,28 @@
             ],
             "argument_dynamic_catch_place_point_target_array": [
                 [
-                    1.57,
-                    0,
-                    1.57,
-                    0,
-                    1.57,
-                    0
+                    1.7638,
+                    -0.689,
+                    0.7514,
+                    -0.129,
+                    1.5698,
+                    0.1938
                 ],
                 [
-                    1.57,
-                    0,
-                    1.57,
-                    0,
-                    1.57,
-                    0.78
+                    1.7638,
+                    -0.689,
+                    0.7514,
+                    -0.129,
+                    1.5698,
+                    0.1938
                 ],
                 [
-                    1.57,
-                    0,
-                    1.57,
-                    0,
-                    1.57,
-                    1.57
+                    1.7638,
+                    -0.689,
+                    0.7514,
+                    -0.129,
+                    1.5698,
+                    0.1938
                 ]
             ]
         },
