complete linux module refactor

--- a/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
+++ b/Grandhonor/rk_工地盒子/rk_doc/1-18_版本发行.md
@@ -197,7 +197,7 @@ source /data/static/bash/source.sh
 # gh-rk-1012
 ls /home/user/zjy-190/Videos/gh-rk-1012/
 mv /home/user/zjy-190/Videos/gh-rk-1012/zzz.mp4 /home/user/zjy-190/Videos/gh-rk-1012/zzz_20.mp4
-scp -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1012:22,proxyport=5002' root@47.100.31.121:/userdata/zzz.mp4 /home/user/zjy-190/Videos/gh-rk-1012/
+scp -o 'proxycommand socat - PROXY:47.100.31.121:gh-rk-1012:22,proxyport=5002' root@47.100.31.121:/userdata/zzz-*.mp4 /home/user/zjy-190/Videos/gh-rk-1012/video-4/
 ffplay /home/user/zjy-190/Videos/gh-rk-1012/zzz.mp4
 
 # gh-rk-1008
