--- a/C++/C++_10_标准库/C++_10_31_map.md
+++ b/C++/C++_10_标准库/C++_10_31_map.md
@@ -2,6 +2,67 @@
 
 + C++ <map>标准库
 
+## C++ std::map::find() 函数 详解
+
+`std::map::find()` 是 C++ 标准模板库（STL）中 `std::map` 类的成员函数之一，用于在 map 中查找给定键的位置。以下是该函数的详细解释：
+
+**函数签名：**
+
+```cpp
+iterator find(const key_type& k);
+const_iterator find(const key_type& k) const;
+```
+
+**参数：**
+
+- `k`：要查找的键值。
+
+**返回值：**
+
+- 如果找到了给定键，则返回指向该键值对的迭代器；
+- 如果未找到，则返回指向 `end()` 的迭代器。
+
+**示例：**
+
+```cpp
+#include <iostream>
+#include <map>
+
+int main() {
+    std::map<int, std::string> myMap;
+
+    // 插入一些键值对
+    myMap[1] = "One";
+    myMap[2] = "Two";
+    myMap[3] = "Three";
+    myMap[4] = "Four";
+
+    // 查找键为2的位置
+    auto it = myMap.find(2);
+
+    // 检查结果
+    if (it != myMap.end()) {
+        std::cout << "Key found: " << it->first << ", Value: " << it->second << std::endl;
+    } else {
+        std::cout << "Key not found" << std::endl;
+    }
+
+    // 尝试查找不存在的键
+    it = myMap.find(5);
+
+    // 检查结果
+    if (it != myMap.end()) {
+        std::cout << "Key found: " << it->first << ", Value: " << it->second << std::endl;
+    } else {
+        std::cout << "Key not found" << std::endl;
+    }
+
+    return 0;
+}
+```
+
+在这个例子中，我们使用 `myMap.find(2)` 查找键为2的位置，并输出结果。然后，我们尝试使用 `myMap.find(5)` 查找不存在的键，并输出结果。通过使用 `find` 函数，我们可以有效地检查某个键是否存在于 `std::map` 中，以及在存在的情况下获取相应的值。
+
 ## C++ <map>标准库
 
 `<map>` 是 C++ 标准库中的头文件，定义了一组容器类模板，用于实现键-值对形式的关联容器。
