更新资金和C++

--- a/Personal/资金.md
+++ b/Personal/资金.md
@@ -93,6 +93,19 @@
 
 + 工资： 7343.25
 
-## 2023.2.10 - 2024.1.10 
+## 2024.2.10 - 2024.1.10 
 
 + 工资预计收入: 22029.75
+
+## 2024.03.08
+
++ 总存款: 3w
++ 当前余额: 
+  + 招商: 8452.97
+  + 农业: 318.42
+  + 信用卡: -92.95
+
++ 截至下一次收入之前的规划
+  + 存钱: 6000
+  + 房租: 700
+  + 剩余: 1752.97 + 318 - 92.96 = 1978.01
